-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: openjdk8u302, 11.0.12, 17
-
Component/s: core-svc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8272221 | 11.0.14-oracle | Harold Seigel | P4 | Resolved | Fixed | b01 |
| JDK-8268048 | 11.0.13 | Severin Gehwolf | P4 | Resolved | Fixed | b01 |
| JDK-8269874 | openjdk8u312 | Severin Gehwolf | P4 | Resolved | Fixed | b02 |
| JDK-8282613 | 8u341 | David Buck | P4 | Resolved | Fixed | b01 |
| JDK-8284595 | 8u331 | Anton Litvinov | P4 | Resolved | Fixed | b31 |
| JDK-8282708 | 8u321 | David Buck | P4 | Closed | Fixed | b34 |
------
OperatingSystemImpl.getCpuLoad() may return 1.0 in a container, even though the CPU load is obviously below 100%.
We created a 5-core container and run 4 "while (true)" loops in the container. OperatingSystemImpl.getCpuLoad() returned 1.0, which is incorrect (0.8 is correct).
"systemLoad" in getCpuLoad() is exactly 4.0 before "systemLoad = Math.min(1.0, systemLoad);". The problem is caused by using the elapsed time (specified by "cpu.cfs_period_us") instead of the total CPU time (specified by "cpu.cfs_quota_us"). Therefore, it is more reasonable to divide cpu usage time by "quotaNanos" instead of "elapsedNanos".
- backported by
-
JDK-8268048 OperatingSystemImpl.getCpuLoad() returns incorrect CPU load inside a container
-
- Resolved
-
-
JDK-8269874 OperatingSystemImpl.getCpuLoad() returns incorrect CPU load inside a container
-
- Resolved
-
-
JDK-8272221 OperatingSystemImpl.getCpuLoad() returns incorrect CPU load inside a container
-
- Resolved
-
-
JDK-8282613 OperatingSystemImpl.getCpuLoad() returns incorrect CPU load inside a container
-
- Resolved
-
-
JDK-8284595 OperatingSystemImpl.getCpuLoad() returns incorrect CPU load inside a container
-
- Resolved
-
-
JDK-8282708 OperatingSystemImpl.getCpuLoad() returns incorrect CPU load inside a container
-
- Closed
-
- relates to
-
JDK-8268098 jdk.CPULoad event reports incorrect CPU usage inside a container
-
- Closed
-
-
JDK-8268103 JNI functions incorrectly return a double after JDK-8265836
-
- Resolved
-
-
JDK-8269851 OperatingSystemMXBean getProcessCpuLoad reports incorrect process cpu usage in containers
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/37f36d5c
-
Commit
openjdk/jdk/ef368b32
-
Review
openjdk/jdk11u-dev/20
-
Review
openjdk/jdk/3656