8265836: OperatingSystemImpl.getCpuLoad() returns incorrect CPU load inside a container

Reviewed-by: adinn, andrew